# tally-vouchr-automation

./: .env.example  .gitignore  README.md  drizzle.config.ts  package.json  test-drizzle.ts  tsconfig.base.json  turbo.json
.claude/: settings.local.json
apps/connector/: README.md  go.mod
apps/connector/cmd/vouchr-connector/: main.go
apps/connector/internal/api/: client.go
apps/connector/internal/config/: config.go
apps/connector/internal/tally/: client.go
apps/connector/internal/xml/: voucher.go
apps/web/: .env.example  next.config.ts  package.json  tailwind.config.ts  tsconfig.json  vouchr-local.db-shm  vouchr-local.db-wal  wrangler.toml
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/actions/: waitlist.ts
apps/web/app/waitlist/: page.tsx
apps/web/components/: auth-provider.tsx  jwt-auth-provider.tsx  providers.tsx
apps/web/components/dashboard/: app-shell.tsx  (+9 more)
apps/web/contexts/: auth-context.tsx
apps/web/lib/: api-client.ts  api.ts  auth-client.ts  auth.ts  db.ts  env.ts  org-context.ts  r2.ts  review-data.ts  use-jwt-auth.ts  utils.ts
apps/web/migrations/: 0000_initial.sql  0003_master_source_fields.sql
apps/worker/: .env.example  PROMPT.md  README.md  pyproject.toml
apps/worker/app/: api_routes.py  auth.py  auth_routes.py  config.py  d1_client.py  embedding.py  gemini.py  ledger_mapping.py  main.py  middleware.py  process.py  prompts.py  r2_client.py  schemas.py  storage.py  vector_store.py
docs/: LIGHTSAIL_D1_RUNBOOK.md
scratch/: create_table.js  test.go  test_accounts.xml
scripts/: d1-ids.sh  migrate-d1.sh
(+32 files in other folders)
